openpearl-code/testsuite/must_not_compile/00_basics/004_no_module_name1.expect
004_no_module_name1.prl:1:7: ERROR : Syntax error :missing ID at ')'
MODULE();
       ^
